# richterm

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  main.rs
examples/: richterm.rs
src/: colors.rs  emojis.rs  lib.rs  main.rs  spinners.rs  uuid.rs
