[package]
name = "richterm"
version = "0.4.0"
edition = "2021"
description = "rich terminal, follow's python's famous rich library"
keywords = ["cli", "terminal", "colors", "console", "ansi"]
authors = ["Abdur-Rahmaan Janhangeer <arj.python@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Abdur-RahmaanJ/richterm"
repository = "https://github.com/Abdur-RahmaanJ/richterm"
documentation = "https://docs.rs/richterm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "richterm"
path = "src/lib.rs"

[dependencies]
regex = "1.9.1"
strum = { version = "0.25", features = ["derive"] }
convert_case = "0.6.0"
emojis = "0.6.0"
